# NovelScope

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
data/input/: sample.txt
data/output/: novel.json
data/output/chapters/: chapter_000.json  chapter_001.json  chapter_002.json
src/novelscope/: __init__.py  cli.py  ingestion.py  models.py  nlp.py  pipeline.py  segmentation.py  server.py
src/novelscope.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/novelscope/analyzers/: dialogue.py  entities.py  keywords.py  readability.py  sentiment.py  summary.py
src/novelscope/utils/: text.py
tests/: test_ingestion.py  test_segmentation.py
